--- a/Ejercicio2.html
+++ b/Ejercicio2.html
@@ -66,7 +66,7 @@
     </ul>
 
     <footer>
-      <a href="./Ejercicio1.html">Volver atrás</a> <br />
+      <a href="./index.html">Volver atrás</a> <br />
       <a href="./Ejercicio3.html">Ir al ejercicio 3</a>
     </footer>
   </body>
