--- a/Ejercicio3.html
+++ b/Ejercicio3.html
@@ -55,7 +55,7 @@
     <br />
     <footer>
       <a href="./Ejercicio2.html">Volver atrás</a> <br />
-      <a href="./Ejercicio1.html">Ir al ejercicio 1</a>
+      <a href="./index.html">Ir al ejercicio 1</a>
     </footer>
   </body>
 </html>
